// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init-generate (LONG) jcllib updates: jcl header multi line 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB 'SOMEJOB',
//   REGION=0M
//* atestcomment
//* secondtestcomment
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)

--- End of JCL ---
Submitting Job ZWEGENER
Job ZWEGENER(JOB00000) completed with RC=0
Zowe JCL generated successfully"
`;

exports[`init-generate (LONG) jcllib updates: jcl header multi line without block strings 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB 'SOMEJOB',
//   REGION=0M
//* atestcomment
//* secondtestcomment
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)

--- End of JCL ---
Submitting Job ZWEGENER
Job ZWEGENER(JOB00000) completed with RC=0
Zowe JCL generated successfully"
`;

exports[`init-generate (LONG) jcllib updates: jcl header single line 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB 'SOMEJOB',REGION=0M
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)

--- End of JCL ---
Submitting Job ZWEGENER
Job ZWEGENER(JOB00000) completed with RC=0
Zowe JCL generated successfully"
`;

exports[`init-generate (SHORT) BAD: invalid format defaults.yaml 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly."
`;

exports[`init-generate (SHORT) BAD: missing defaults.yaml 1`] = `
"Error: Could not load config for FILE(/test/dir/zowe.test.yaml):FILE(/test/dir/files/defaults.yaml), status=7
ZWEL0318E - failed to read '/test/dir/files/defaults.yaml' - EDC5129I No such file or directory. (errno2=0x05620062)"
`;

exports[`init-generate (SHORT) PARMLIB negatives 1`] = `"ERROR: ZWEL0316E Invalid PARMLIB format PARMLIB(ZOWE.PR4285(A)."`;

exports[`init-generate (SHORT) PARMLIB negatives 2`] = `"ERROR: ZWEL0316E Invalid PARMLIB format PARMLIB(ZOWE.PR4285(A."`;

exports[`init-generate (SHORT) PARMLIB negatives 3`] = `"ERROR: ZWEL0316E Invalid PARMLIB format PARMLIB(ZOWE.PR4285(A)."`;

exports[`init-generate (SHORT) PARMLIB negatives 4`] = `"ERROR: ZWEL0316E Invalid PARMLIB format PARMLIB(ZOWE.PR4285(A)."`;

exports[`init-generate (SHORT) PARMLIB negatives 5`] = `"ERROR: ZWEL0316E Invalid PARMLIB format PARMLIB(ZOWE.PR4285B))."`;

exports[`init-generate (SHORT) bad ds prefix 1`] = `
"cp: FSUM6258 cannot open file "//'TEST.DATASET.PFX.SOME.DS.NOEXIST.SZWESAMP(ZWEGENER)'": EDC5049I The specified file name could not be located. (errno2=0xC00B0641)
Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: ZWEL0143E Cannot find data set member 'TEST.DATASET.PFX.SOME.DS.NOEXIST.SZWESAMP(ZWEGENER)'. You may need to re-run zwe install."
`;

exports[`init-generate (SHORT) jcl header multi line 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: ZWEL0144E Cannot generate JCL with a header line greater than 80 characters. Line in error: LONGFIELD1,LONGFIELD2,LONGFIELD3,ANOTHER,FIELD,GOING,WAY,PAST,EIGHTY,CHARACTERS,INCLUDING,THIS. Please adjust this line in 'zowe.setup.jcl.header'."
`;

exports[`init-generate (SHORT) jcl header multi line 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB 'SOMEJOB'
//    (0000000000)
//    LONGFIELD1,LONGFIELD2,LONGFIELD3,ANOTHER,FIELD,GOING,WAY,PAST,EIGHTY,CHAR
//    SYSAFF=SYS1
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)

--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly."
`;

exports[`init-generate (SHORT) jcl header multi line 3`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: ZWEL0144E Cannot generate JCL with a header line greater than 80 characters. Line in error: LONGFIELD1,LONGFIELD2,LONGFIELD3,ANOTHER,FIELD,GOING,WAY,PAST,EIGHTY,CHARACTERS. Please adjust this line in 'zowe.setup.jcl.header'."
`;

exports[`init-generate (SHORT) jcl header multi line 4`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB LONGFIELD1,LONGFIELD2,LONGFIELD3,ANOTHER,FIELD,GOING,WAY,PAST,EI
// (0000000000),
// 'SOMEJOB',
// SYSAFF=SYS1
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)

--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly."
`;

exports[`init-generate (SHORT) jcl header single line 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB 'SOMEJOB',(0000000000)
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)

--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly."
`;

exports[`init-generate (SHORT) jcl header single line length 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: ZWEL0144E Cannot generate JCL with a header line greater than 80 characters. Line in error: 'SOMEJOB',(0000000000),ANOTHER,FIELD,GOING,WAY,PAST,EIGHTY,CHARACTERS,INCLUDING,THIS. Please adjust this line in 'zowe.setup.jcl.header'."
`;

exports[`init-generate (SHORT) jcl header single line length 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
ERROR: ZWEL0144E Cannot generate JCL with a header line greater than 80 characters. Line in error: 'SOMEJOB',(0000000000),ANOTHER,FIELD,GOING,WAY,PAST,EIGHTY,CHARACT. Please adjust this line in 'zowe.setup.jcl.header'."
`;

exports[`init-generate (SHORT) jcl header single line length 3`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB 'SOMEJOB',(0000000000),ANOTHER,FIELD,GOING,WAY,PAST,EIGHTY,CHARAC
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)

--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly."
`;

exports[`init-generate (SHORT) simple --dry-run 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)
--- End of JCL ---
JCL not submitted, command run with "--dry-run" flag.
To perform command, re-run command without "--dry-run" flag, or submit the JCL directly."
`;

exports[`init-generate FLAKY interrupt generate commands 1`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)
--- End of JCL ---
Submitting Job ZWEGENER
ERROR:   * Job (JOB00000) doesn't finish within max waiting period.
Job ZWEGENER(JOB00000) completed with RC=1
Zowe JCL generated with errors, check job log. Job completion code=."
`;

exports[`init-generate FLAKY interrupt generate commands 2`] = `
"Temporary directory '/tmp/.zweenv-0000' created.
Zowe will remove it on success, but if zwe exits with a non-zero code manual cleanup would be needed.
Template JCL: TEST.DATASET.PFX.SZWESAMP(ZWEGENER)
--- JCL content ---
//ZWEGENER JOB
//*
//* This program and the accompanying materials are made available
//* under the terms of the Eclipse Public License v2.0 which
//* accompanies this distribution, and is available at
//* https://www.eclipse.org/legal/epl-v20.html
//*
//* SPDX-License-Identifier: EPL-2.0
//*
//* Copyright Contributors to the Zowe Project. 2020, 2020
//*
//*********************************************************************
//*
//* This job is responsible for generating other jobs required
//* to configure Zowe.
//*
//* The method of validating your configuration is using
//* JSON Schema <https://json-schema.org>. Zowe provides
//* the ConfigMgr to assist in this. This job will invoke
//* the ConfigMgr to validate your current configuration
//* before generating any jobs. If there are any values
//* that are incorrect, you will be notified. You should
//* fix the value and then run this job again. You can run
//* this job as many times as you need.
//*
//* Configmgr documentation:
//* https://docs.zowe.org/stable/user-guide/configmgr-using
//*
//* Note: Any string with braces has an associated yaml value
//*       in one of the yaml definitions for Zowe.
//*       You must find the value and substitute it.
//*
//*       {key} -> value
//*
//GENER    EXEC PGM=IKJEFT1B
//ISPPROF  DD   DSN=,DISP=(NEW,DELETE),UNIT=VIO,
//   DCB=(RECFM=FB,LRECL=80,BLKSIZE=3120,DSORG=PO),
//   SPACE=(3120,(20,5,10))
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//SYSPROC  DD DSN=TEST.DATASET.PFX.SZWEEXEC,DISP=SHR
//*
//* Replace TEST.DATASET.PFX with the
//* Value as seen in zowe.yaml
//*
//STEPLIB  DD DSN=TEST.DATASET.PFX.SZWELOAD,DISP=SHR
//ISPPLIB  DD DSN=ISP.SISPPENU,DISP=SHR
//ISPMLIB  DD DSN=ISP.SISPMENU,DISP=SHR
//ISPTLIB  DD DSN=ISP.SISPTENU,DISP=SHR
//ISPSLIB  DD DSN=ISP.SISPSENU,DISP=SHR
//ISPLOG   DD UNIT=SYSDA,SPACE=(CYL,(10,1,1),RLSE),
//   DCB=(RECFM=VA,LRECL=125,BLKSIZE=129)
//*
//* The order must be as follows.
//*
//* zowe-yaml-schema.json
//* server-common.json
//*
//* Replace /test/dir with where your Zowe run time
//* directory is, as seen in zowe.yaml
//*
//MYSCHEMA DD   *,DLM=$$
FILE /test/dir/schemas/zowe-yaml-schema.json
FILE /test/dir/schemas/server-common.json
$$
//*
//* The DD below must include one or more FILE or PARMLIB
//* entries. The lower entries have their values
//* overridden by the higher entries.
//*
//* Ex. PARMLIB MY.ZOWE.CUSTOM.PARMLIB(YAML)
//*     FILE /some/other/zowe.yaml
//MYCONFIG DD   *,DLM=$$
FILE /test/dir/zowe.test.yaml
$$
//CMGROUT  DD   SYSOUT=*
//SYSPRINT DD   SYSOUT=*
//SYSTSPRT DD   SYSOUT=*
//*
//* Change 'generate' to 'nogenerate' if you only
//* want to validate your configuration. The default
//* option, 'generate', will validate and then generate
//* jobs based on your configuration.
//*
//*   - generate
//*   - nogenerate
//*
//* Change 'noverbose' to 'verbose' below for
//* advanced logging. This is not needed unless
//* there is an error.
//*
//*   - verbose
//*   - noverbose
//*
//SYSTSIN  DD   *
ISPSTART CMD(%ZWEGEN00 -
generate -
noverbose -
)
--- End of JCL ---
Submitting Job ZWEGENER
Job ZWEGENER(JOB00000) completed with RC=2
Zowe JCL generated with errors, check job log. Job completion code=CANCELED."
`;
